feat: MusicWidget show translated names